Modificaciones generales a toda la página

--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>E2BIZ Consultores</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>E2BIZ Consultores | Home</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fresca|Nunito:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img alt="Brand" src="img/logotipo/logo-mini.png">
-          </a>
-        </div>
+  <nav class="navbar">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <img alt="Brand" src="img/logotipo/logo-mini.png">
+        </a>
+      </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="quienes-somos.html">Quienes somos</a></li>
-            <li><a href="project-client.html">Proyectos y Clientes</a></li>
-            <li><a href="trabaja.html">Trabaja con nosotros</a></li>
-            <li><a href="#contacto">Contactanos</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-  </header>
-  <section class="bg-h text-center">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">INICIO</a></li>
+          <li><a href="about.html">QUIÉNES SOMOS</a></li>
+          <li><a href="project-client.html">PROYECTOS Y CLIENTES</a></li>
+          <li><a href="work.html">TRABAJA CON NOSOTROS</a></li>
+          <li><a href="#contact">CONTÁCTANOS</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <header class="bg-h text-center">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-offset-3 col-md-6">
+        <div class="col-xs-12 col-sm-10 col-md-offset-3 col-md-6">
           <div class="box-h">
             <hr class="divider">
             <h1>Energy to Bussiness</h1>
@@ -50,142 +49,134 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="text-center pd-s">
+  </header>
+  <section class="text-center">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-12">
-          <h2 class="title-s">Quienes Somos</h2>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <h2 class="color-green">Quienes Somos</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-offset-2 col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="col-xs-12 col-md-offset-3 col-md-6">
+          <p>E2BIZ es una empresa dedicada a proveer consultoría estratégica y técnica en las áreas de energías renovables, eficiencia energética, tecnologías "bajas en emisiones de carbono" y proyectos de mitigación de emisiones de GEI.</p>
         </div>
       </div>
     </div>
   </section>
-  <section class="services pd-s">
-    <div class="container text-center">
+  <section class="services bg-gray text-center">
+    <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-12">
-          <h2 class="title-s">Nuestros Servicios</h2>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <h2 class="color-green">Nuestros Servicios</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-4">
-          <div class="bg-w">
-            <img class="img-responsive" src="img/Energia4.jpg">
+        <div class="col-xs-12 col-sm-12 col-md-4">
+          <img class="img-responsive inb" src="img/Energia4.jpg">
+          <div class="bg-white box-w">
             <h4>Energía y Prospectiva</h4>
             <p class="pd-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <a class="btn" href="#">Lee más</a>
+            <a class="btn link-p" href="#">Lee más</a>
           </div>
         </div>
-        <div class="col-xs-12 col-md-4">
-          <div class="bg-w">
-           <img class="img-responsive" src="img/Energia2.jpg">
-           <h4>Energía y Prospectiva</h4>
-           <p class="pd-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-           <a class="btn" href="#">Lee más</a>
-         </div>
-       </div>
-       <div class="col-xs-12 col-md-4">
-        <div class="bg-w">
-          <img class="img-responsive" src="img/Energia3.jpg">
-          <h4>Energía y Prospectiva</h4>
-          <p class="pd-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-          <a class="btn" href="#">Lee más</a>
+        <div class="col-xs-12 col-sm-12 col-md-4">
+          <img class="img-responsive" src="img/Energia2.jpg">
+          <div class="bg-white box-w">
+            <h4>Energía y Prospectiva</h4>
+            <p class="pd-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <a class="btn link-p" href="#">Lee más</a>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4">
+          <img class="img-responsive" src="img/Energia2.jpg">
+          <div class="bg-white box-w">
+            <h4>Energía y Prospectiva</h4>
+            <p class="pd-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <a class="btn link-p" href="#">Lee más</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="pd-s">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-12">
-        <h2 class="title-s text-center">
-          Proyectos y Clientes
-        </h2>
+  </section>
+  <section class="pd-s">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <h2 class="color-green text-center">
+            Proyectos y Clientes
+          </h2>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-offset-1 col-md-5">
-        <img class="img-responsive" src="img/proyecto-home.jpg">
-        <h4>2016</h4>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-5">
+          <img class="img-responsive" src="img/proyecto-home.jpg">
+          <h4>2016</h4>
           <h4>Cambios en la producción de energia</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices, nulla elementum.</p>
           <h5>Nombre del Cliente, Perú</h5>
-      </div>
-      <div class="col-xs-12 col-md-5">
-        <img class="img-responsive" src="img/proyecto-home2.jpg">
-        <h4>2016</h4>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-5">
+          <img class="img-responsive" src="img/proyecto-home2.jpg">
+          <h4>2016</h4>
           <h4>Cambios en la producción de energia</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices, nulla elementum.</p>
           <h5>Nombre del Cliente, Perú</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-offset-4 col-md-4 text-center">
+          <a class="btn btn-primary btn-m btn-lg">Lee Todo</a>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-offset-4 col-md-4 text-center">
-        <a class="btn btn-primary btn-m btn-lg">Lee Todo</a>
+  </section>
+  <section id="contact" class="bg-form">
+    <div class="container ">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <h2 class="text-center color-white">Contáctanos</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm12 col-md-offset-3 col-md-6">
+          <form>
+            <div class="form-group">
+              <input type="name" class="form-control" id="" placeholder="Nombre">
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" id="" placeholder="Correo Electrónico">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" rows="5" placeholder="Mensaje"></textarea>
+            </div>
+            <a class="btn btn-default btn-lg" href="#">ENVIAR</a>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  <footer>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col xs-12 col-sm-12 col-md-offset-3 col-md-6">
+          <a href="https://www.facebook.com/pages/E2biz-SoftTech/105057792908916"><i class="fa fa-facebook fa-1x" aria-hidden="true"></i></a>
+          <span class="separed">|</span>
+          <a href="#"><i class="fa fa-twitter fa-1x" aria-hidden="true"></i></a>  
+          <address>
+            Av. Pardo 601, Piso 11 Miraflores, Lima <br>
+            997.509.973 <br> 
+          </address>
+          <span>Hecho por Laboratoria</span>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-<!-- código de yessica -->
-<div class="container contacto" id="contacto">
-  <div class="row bg-contacto">
-    <h6 class="text-center">CONTACTANOS</h6>
-    <div class="col-lg-7 col-lg-offset-3 formulario">
-      <form class="form-horizontal" role="form">
-        <div class="row form-group">
-          <div class="col-sx-12 col-sm-12 col-md-10">
-            <input type="name" class="form-control" id="name" placeholder="Nombre">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sx-12 col-sm-12 col-md-10">
-            <input type="email" class="form-control" id="email" placeholder="Correo Electrónico">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sx-12 col-sm-12 col-md-10">
-            <textarea class="form-control" id="comment" rows="7" placeholder="Comentarios"></textarea>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sx-12 col-sm-12 col-md-10 text-center">
-            <a class="btn btn-primary btn-lg href="#">ENVIAR</a>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<footer class="container-fluid footer">
-  <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 redes-sociales">
-      <div class="red">
-        <a href="https://www.facebook.com/pages/E2biz-SoftTech/105057792908916"><i class="fa fa-facebook fa-1x" aria-hidden="true"></i></a>
-        <i><big>&#124;</big></i>
-        <a href="#"><i class="fa fa-twitter fa-1x" aria-hidden="true"></i></a>  
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-12 redes-sociales">
-      <div class="text-center">
-        <address>
-          Av. Pardo 601, Piso 11 Miraflores, Lima <br>
-          997.509.973 <br>
-          &copy;<small>&nbsp;Hecho por Laboratoria</small> 
-        </address>
-      </div>
-    </div>
-  </div>
-</footer> <!-- fin código yessica-->
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/8d57eaf1a3.js"></script>
 </body>
 </html>
