--- a/trabaja.html
+++ b/trabaja.html
@@ -1,116 +1,106 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>E2biz</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="http://themes.static.1001fonts.net/netefx/cache/d/4/d41d8cd98f00b204e9800998ecf8427e.css">
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>E2BIZ Consultores | Trabaja con Nosotros</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fresca|Nunito:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <nav class="navbar">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <img alt="Brand" src="img/logotipo/logo-mini.png">
+        </a>
+      </div>
 
-  	<header>
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="menu-inicio" aria-expanded="false">
-              <span class="sr-only">Menu</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="Logotipo/Logotipo.png"></a>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">INICIO</a></li>
+          <li><a href="about.html">QUIÉNES SOMOS</a></li>
+          <li><a href="project-client.html">PROYECTOS Y CLIENTES</a></li>
+          <li><a href="work.html">TRABAJA CON NOSOTROS</a></li>
+          <li><a href="#contact">CONTÁCTANOS</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <section class="text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <h2>Trabaja con nosotros</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8">
+          <p>There's no better way to help than to get out and experience nature for yourself.
+            Donec id elit non mi porta gravida at eget metus. Donec sed odio dui. Maecenas faucibus mollis interdum.</p>
           </div>
-          <div class="collapse navbar-collapse" id="menu-inicio">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="index.html">INICIO</a></li>
-              <li><a href="quienes-somos.html">QUIENES SOMOS</a></li>
-              <li><a href="project-client.html">PROYECTOS Y CLIENTES</a></li>
-              <li><a href="trabaja.html">TRABAJA CON NOSOTROS</a></li>
-              <li><a href="contacto.html">CONTACTANOS</a></li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
-    </header>
-
-    <div class="container e2">
-      <div class="row">
-        <h2 class="text-center">TRABAJA CON NOSOTROS</h2>
-        <div class="col-xs-12 col-sm-12 col-md-12 descripcion">
-          <p><small>There`s no better way to help than to get out and experience nature for yourself. <br>
-          Donec id elit non mi porta gravida at eget metus. Donec sed odio dui. Maecenas faucibus mollis interdum.</small>
-          </p>
         </div>
       </div>
-    </div>
-
-    <div class="container contacto">
-      <div class="row bg-contacto">
-        <h6 class="text-center">CONTACTANOS</h6>
-        <div class="col-lg-4 col-lg-offset-4 formulario">
-          <form class="form-horizontal" role="form">
-            <div class="row form-group">
-              <div class="col-sx-12 col-sm-12 col-md-10">
-                <input type="name" class="form-control" id="name" placeholder="Nombre">
+    </section>
+    <section class="bg-form">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <h2 class="text-center">Contáctanos</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm12 col-md-offset-3 col-md-6">
+            <form>
+              <div class="form-group">
+                <input type="name" class="form-control" id="" placeholder="Nombre">
               </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sx-12 col-sm-12 col-md-10">
-                <input type="email" class="form-control" id="email" placeholder="Correo Electrónico">
+              <div class="form-group">
+                <input type="email" class="form-control" id="" placeholder="Correo Electrónico">
               </div>
-            </div>
-            <div class="form-group cv-enviar">
-              <div class="col-sx-12 col-sm-12 col-md-7">
-                <input type="name" class="form-control" id="cv" placeholder="CV">
+              <div class="form-group input-group">
+                <input type="cv" class="form-control" id="cv-input" placeholder="CV">
+                <span class="input-group-addon">Subir</span>
               </div>
-              <div class="col-sx-6 col-sm-12 col-md-5">
-                <button type="button" class="btn btn-primary subida">SUBIR</button>
+              <div class="form-group">
+                <textarea class="form-control" rows="5" placeholder="Mensaje"></textarea>
               </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sx-12 col-sm-12 col-md-10">
-                <textarea class="form-control" id="comment" rows="7" placeholder="Comentarios"></textarea>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sx-12 col-sm-12 col-md-10 text-center">
-                <button type="submit" class="btn btn-primary"><a href="#">ENVIAR</a></button>
-              </div>
-            </div>
-          </form>
+              <a class="btn btn-default btn-lg center bg-green" href="#">ENVIAR</a>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-
-    <footer class="container-fluid footer">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 redes-sociales">
-          <div class="red">
+    </section>
+    <footer>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col xs-12 col-sm-12 col-md-offset-3 col-md-6">
             <a href="https://www.facebook.com/pages/E2biz-SoftTech/105057792908916"><i class="fa fa-facebook fa-1x" aria-hidden="true"></i></a>
-            <i><big>&#124;</big></i>
+            <span class="separed">|</span>
             <a href="#"><i class="fa fa-twitter fa-1x" aria-hidden="true"></i></a>  
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 redes-sociales">
-          <div class="text-center">
             <address>
               Av. Pardo 601, Piso 11 Miraflores, Lima <br>
-              997.509.973 <br>
-              &copy;<small>&nbsp;Hecho por Laboratoria</small> 
+              997.509.973 <br> 
             </address>
+            <span>Hecho por Laboratoria</span>
           </div>
         </div>
       </div>
     </footer>
-
-    
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/8d57eaf1a3.js"></script>
   </body>
-</html>
+  </html>
